test: creating test for WeiEtAl2014StrategyExecutor